trying to solve a problem in the portfolio image showing

--- a/portfolio/advertising/index.html
+++ b/portfolio/advertising/index.html
@@ -151,7 +151,7 @@
 </div>
 	</div>
 	<div id="main">
-		<h1>Concept and advertising</h1>
+		<h1>PitsLamp Photograhy | Concept and advertising</h1>
 		<p>This page contains my work for companies, advertising agencies and my own personal concepts.</p>
 
 <ul>
